# deps-gen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: configuration.rs  data.rs  generator.rs  lib.rs  test.rs
