[package]
name = "deps-gen"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Generate a file from template and Cargo.lock"
repository = "https://github.com/picrap/deps-gen.git"
homepage = "https://github.com/picrap/deps-gen"

[dependencies]
handlebars = { version = "5.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
cargo_metadata = { version = "0.18.1" }
